# open_mower_ros

./: .pre-commit-config.yaml
docker/: Dockerfile
src/mower_logic/src/mower_logic/: mower_logic.cpp
src/mower_logic/src/mower_logic/behaviors/: AreaRecordingBehavior.cpp  MowingBehavior.cpp
src/mower_map/: CMakeLists.txt
src/mower_map/src/: mower_map_service.cpp
src/mower_notify/: CMakeLists.txt  package.xml
src/mower_notify/config/: notifications.yaml
src/mower_notify/launch/: mower_notify.launch
src/mower_notify/scripts/: mower_notify.py
src/mower_web_ui/: CMakeLists.txt  package.xml
src/mower_web_ui/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/mower_web_ui/frontend/src/: App.tsx  index.css  main.tsx
src/mower_web_ui/frontend/src/components/: Layout.tsx  MqttProvider.tsx
src/mower_web_ui/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
src/mower_web_ui/frontend/src/pages/: Control.tsx  Dashboard.tsx  Events.tsx  MapEditor.tsx  MapView.tsx  Settings.tsx
src/mower_web_ui/frontend/src/shared/: utils.ts
src/mower_web_ui/frontend/src/store/: eventsStore.ts  mapStore.ts  mqttStore.ts  robotStore.ts  settingsStore.ts
src/open_mower/launch/: open_mower.launch
utils/scripts/: convert_map_legacy.py
