<?xml version="1.0"?>
<package format="2">
  <name>mower_notify</name>
  <version>0.1.0</version>
  <description>Sends ntfy.sh push notifications on OpenMower state events</description>

  <maintainer email="killian.mccree+claude@gmail.com">glecocq</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>mower_msgs</depend>
</package>
